# homophone-replacer

./: CMakeLists.txt  README.md  build.bat  build.sh
cmake/: kaldifst.cmake
data/hr-files/: mapping.txt  replace.fst
src/: homophone-replacer.cc  homophone-replacer.h  main.cc
src/jieba/: jieba-wrapper.cc  jieba-wrapper.h
src/utils/: file-utils.cc  file-utils.h  text-utils.cc  text-utils.h
